--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "sit725-prac2",
+  "name": "sit725-prac3",
   "version": "1.0.0",
-  "description": "Practicals 2: REST API",
+  "description": "Practicals 3: Client Server Applications & UI's",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/davfred777/sit725-prac2.git"
+    "url": "git+https://github.com/davfred777-sit725-prac3.git"
   },
   "author": "David",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/davfred777/sit725-prac2/issues"
+    "url": "https://github.com/davfred777/sit725-prac3/issues"
   },
-  "homepage": "https://github.com/davfred777/sit725-prac2#readme",
+  "homepage": "https://github.com/davfred777/sit725-prac3#readme",
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
